--- a/index.css
+++ b/index.css
@@ -8,14 +8,32 @@ body
 
 .page
 {
-    -webkit-column-count: 4;
+    -webkit-column-count: 3;
     -webkit-column-rule: 2px solid #000;
-    -moz-column-count: 4;
+    -moz-column-count: 3;
     -moz-column-rule: 2px solid #000;
-    column-count: 4;
+    column-count: 3;
     column-rule: 2px solid #000;
-    -moz-hyphens: auto;     /*Работает в мозилле*/
+    -moz-hyphens: auto;
     hyphens: auto;
+}
+
+.first
+{
+    -webkit-column-count: 2;
+    -webkit-column-rule: 2px solid #000;
+    -moz-column-count: 2;
+    -moz-column-rule: 2px solid #000;
+    column-count: 2;
+    column-rule: 2px solid #000;
+    -moz-hyphens: auto;
+    hyphens: auto;
+}
+
+.first-img
+{
+    -webkit-column-span: all;
+    column-span: all;
 }
 
 p
@@ -45,7 +63,8 @@ h1
 
 h2
 {
-    margin: 7px;
+    margin-top: 15px;
+    margin-bottom: 2px;
     font: 1.3em Yanone Kaffeesatz, sans-serif;
     text-align: center;
 }
